--- a/front/src/components/ImgContainer/ImgContainer.scss
+++ b/front/src/components/ImgContainer/ImgContainer.scss
@@ -9,6 +9,8 @@
     padding: 10px;
     border: 1px solid $white;
     border-radius: 0.2em;
+    max-height: 90%;
+    max-width: 90%;
   }
 
   .percentage{
