--- a/front/src/components/ImgContainer/ImgContainer.scss
+++ b/front/src/components/ImgContainer/ImgContainer.scss
@@ -5,6 +5,8 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  height: 100%;
+  width: 100%;
   img {
     padding: 10px;
     border: 1px solid $white;
