--- a/front/src/App.scss
+++ b/front/src/App.scss
@@ -95,4 +95,11 @@ body,
       }
     }
   }
+
+  .download-button{
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    z-index: 9999;
+  }
 }
