--- a/front/src/App.scss
+++ b/front/src/App.scss
@@ -102,4 +102,11 @@ body,
     right: 10px;
     z-index: 9999;
   }
+
+  .base-image-button{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    z-index: 9999;
+  }
 }
